workshops/01-service-mesh/deploy/base/01-control-plane/namespace-istio-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  labels:
    istio-injection: enabled
    istio-discovery: enabled
